# qwen2.5-unsloth-qlora-finetune

./: .gitignore  Dockerfile  LICENSE  README.md  architecture.md  curl.sh  docker-compose.yml  folder-structure.md  infra-docker-compose.yml  infra.env.example  llm-finetune-studio.md  run.sh  schema-plan.md  server.env.example  test.jsonl
UI/: README.md  package-lock.json  package.json  vite.config.js
UI/src/: App.jsx  index.css
UI/src/components/: Header.jsx  Sidebar.jsx  UI.jsx
UI/src/pages/: AuthPage.jsx  DatasetPage.jsx  EvalPage.jsx  ModelPage.jsx  TrainPage.jsx
minio-init/: Dockerfile  init.sh
postgres-init/: Dockerfile  init.sh  schema.sql
qdrant-init/: Dockerfile  init.sh
redis-init/: Dockerfile  init.sh
server/: Cargo.toml  folder-structure.md
server/services/gateway/: Cargo.toml
server/services/gateway/src/: config.rs  main.rs
server/services/gateway/src/routes/: auth.rs  datasets.rs  jobs.rs  mod.rs  models.rs
server/services/job-manager/: Cargo.toml
server/services/job-manager/src/: main.rs
server/services/model-registry/: Cargo.toml
server/services/model-registry/src/: main.rs
server/services/storage-service/: Cargo.toml
server/services/storage-service/src/: main.rs
server/services/stream-service/: Cargo.toml
server/services/stream-service/src/: main.rs
server/shared/: Cargo.toml
server/shared/src/: config.rs  lib.rs
server/shared/src/auth/: jwt.rs  middleware.rs  password.rs
server/shared/src/db/: datasets.rs  jobs.rs  mod.rs  users.rs
server/shared/src/errors/: mod.rs
server/shared/src/redis/: mod.rs  pubsub.rs  queue.rs  session.rs
server/shared/src/types/: adapter.rs  dataset.rs  job.rs  mod.rs  user.rs
server/src/: config.rs  main.rs
