# finetune-studio/server/services/gateway/Cargo.toml
# Gateway service — public-facing API, auth, JWT, UI static files.
# Binary: gateway  |  Port: 8000

[package]
name    = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
shared      = { workspace = true }
axum        = { workspace = true }
tokio       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
dotenvy     = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx        = { workspace = true }
redis       = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt      = { workspace = true }
validator   = { workspace = true }
hmac        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
async-stream = "0.3"
futures      = "0.3"
