# finetune-studio/server/services/stream-service/Cargo.toml
# Stream service — SSE connections, Redis pub/sub → browser event bridge.
# Binary: stream_service  |  Port: 8002
[package]
name    = "stream-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stream_service"
path = "src/main.rs"

[dependencies]
shared     = { workspace = true }
axum       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
dotenvy    = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
